--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -21,4 +20,17 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-replay_pid*
+
+# nodejs ignores
+node_modules
+package-lock.json
+
+/.classpath
+/.project
+/bin
+/.gradle
+/.settings
+/debug.log
+/target/
+credentials.json
+user.properties
